--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,18 +4,19 @@
     // Use the base codespace image
     "image": "mcr.microsoft.com/vscode/devcontainers/universal:latest",
     "remoteUser": "codespace",
-    "overrideCommand": false ,
+    "overrideCommand": false,
     // Add the IDs of extensions you want installed when the container is created.
     "customizations": {
-        "vscode": {
-            "extensions": [
-                "GitHub.copilot"
-            ]
+      "vscode": {
+        "extensions": [
+            "GitHub.copilot"
+          ]
         },
-        "codespaces": {
-            "openFiles": [
-                "codespace.md"
-            ]
+      "codespaces": {
+         "openFiles": [
+            "codespace.md"
+          ]
         }
-    }
+      },
+    "postCreateCommand": "echo '# Writing code upon codespace creation!'  >> codespace.md"
   }
